# Bilge

./: .gitignore  Bilge.sln  Bilge.vcxproj  Bilge.vcxproj.filters  CMakeLists.txt  README.md  application.cpp  application.h  game.cpp  game_systems.h  logger.cpp  logger.h  platform.h  platform_win32.cpp  renderer.cpp  renderer.h
Engine/: defines.h  game_interface.h
Engine/Core/Application/: application.cpp  application.h
Engine/Core/ECS/: ecs.cpp  ecs.h
Engine/Core/Logger/: logger.cpp  logger.h
Engine/Core/Renderer/: renderer.cpp  renderer.h
Engine/Platform/: platform.h  platform_win32.cpp
Game/: game.cpp  level_generator.cpp  level_generator.h
